syntax = "proto3";
package nodeapi;

message Empty {}

service NodeAPI {
  rpc AssignId(Empty) returns (NodeId);
  rpc StreamSensorData(stream SensorData) returns (Empty);
}

message NodeId {
  uint32 id = 1;
}

message SensorData {
  uint32 id = 1;
  float distance = 2;
  float temperature = 3;
  float relativeHumidity = 4;
}
